# firefly-categorizer

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  cliff.toml  docker-compose.yml  main.py  pyproject.toml
.github/skills/python-development/: .skill-meta.json
.github/workflows/: pr-checks.yml  release.yml
config/: config.yaml
src/firefly_categorizer/: app.py  logger.py  main.py  manager.py  models.py
src/firefly_categorizer/api/: dependencies.py  schemas.py
src/firefly_categorizer/api/routes/: categorize.py  pages.py  training.py  transactions.py  webhook.py
src/firefly_categorizer/classifiers/: base.py  llm.py  memory.py  tfidf.py
src/firefly_categorizer/core/: configuration.py  settings.py
src/firefly_categorizer/domain/: tags.py  timefmt.py  transactions.py
src/firefly_categorizer/integration/: firefly.py
src/firefly_categorizer/services/: categorization.py  firefly_data.py  training.py
src/firefly_categorizer/web/templates/: config.html  help.html  index.html  layout.html  train.html
src/firefly_categorizer/web/templates/components/config/: content.html  head.css  head.html  scripts.html
src/firefly_categorizer/web/templates/components/help/: brain.html  content.html  head.html  hero.html  setup.html  workflow.html
src/firefly_categorizer/web/templates/components/index/: filters.html  head.html  hero.html  scripts.html  transactions.html
src/firefly_categorizer/web/templates/components/train/: content.html  head.html  info_panel.html  (+5 more)
tests/: conftest.py  reproduce_issue.py  test_api.py  test_integration.py  test_llm.py  test_manager.py  test_memory.py  test_tfidf.py
(+41 files in other folders)
