[project]
name = "firefly-categorizer"
version = "0.1.0"
description = "Financial transaction categorizer for Firefly III using Hybrid ML/LLM approach"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "rapidfuzz>=3.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
strict = true
